# donkey-quoter

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  Dockerfile  FEATURES_AUDIT.md  README.md  api.py  app.py  pyproject.toml  render.yaml  requirements-dev.txt  requirements.txt
.claude/: settings.local.json
.github/ISSUE_TEMPLATE/: quote_submission.yml
.streamlit/: config.toml
data/: api_limits.json  haikus.json
docs/: API_CLAUDE_INTEGRATION.md  API_IMPROVEMENTS.md  DEPLOY_RENDER.md
scripts/: generate_missing_haikus.py  haiku_cli.py  migrate_haikus.py  regenerate_haikus.py
src/donkey_quoter/: __init__.py  api_limiter.py  claude_api.py  config.py  haiku_generator.py  haiku_storage.py  models.py  quote_manager.py  state_manager.py  styles.css  token_counter.py  translations.py  ui_components.py
src/donkey_quoter/api/: __init__.py  auth.py  client.py  dependencies.py  exceptions.py  schemas.py
src/donkey_quoter/api/routers/: __init__.py  export.py  haikus.py  quotes.py
src/donkey_quoter/config/: __init__.py  api_pricing.py  model_mapping.py  settings.py
src/donkey_quoter/core/: __init__.py  data_loader.py  haiku_adapter.py  haiku_manager.py  haiku_service.py  quote_adapter.py  quote_service.py  services.py  storage.py
src/donkey_quoter/data/: __init__.py  quotes.json  quotes.py
src/donkey_quoter/infrastructure/: __init__.py  anthropic_client.py
src/donkey_quoter/prompts/: __init__.py  haiku_prompts.py
src/donkey_quoter/ui/: __init__.py  cli_display.py  components.py  layouts.py  pages.py  progress_bar.py  styles.css  styles.py  unified_components.py
